--- a/index.html
+++ b/index.html
@@ -132,34 +132,34 @@
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team list">
-            <li class="team-item item">
+            <li class="item">
               <img src="./images/designer.jpg" alt="Співробітник" width="270" />
               <div class="team-card">
                 <h3 class="team-card__title">Ігор Дем'яненко</h3>
                 <p class="team-card__profession">Product Designer</p>
-                <ul class="soc__list list">
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link">
-                      <svg class="soc__icon" width="20" height="20">
+                <ul class="social list">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -168,32 +168,32 @@
             </li>
             <li class="item">
               <img src="./images/developer.jpg" alt="Співробітниця" width="270" />
-              <div class="card">
-                <h3 class="team__title">Ольга Рєпіна</h3>
-                <p class="profession">Frontend Developer</p>
-                <ul class="soc__list list">
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link">
-                      <svg class="soc__icon" width="20" height="20">
+              <div class="team-card">
+                <h3 class="team-card__title">Ольга Рєпіна</h3>
+                <p class="team-card__profession">Frontend Developer</p>
+                <ul class="social list">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -202,32 +202,32 @@
             </li>
             <li class="item">
               <img src="./images/marketing.jpg" alt="Співробітник" width="270" />
-              <div class="card">
-                <h3 class="team__title">Микола Тарасов</h3>
-                <p class="profession">Marketing</p>
-                <ul class="soc__list list">
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link">
-                      <svg class="soc__icon" width="20" height="20">
+              <div class="team-card">
+                <h3 class="team-card__title">Микола Тарасов</h3>
+                <p class="team-card__profession">Marketing</p>
+                <ul class="social list">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -236,32 +236,32 @@
             </li>
             <li class="item">
               <img src="./images/uidesigner.jpg" alt="Співробітник" width="270" />
-              <div class="card">
-                <h3 class="team__title">Михайло Єрмаков</h3>
-                <p class="profession">UI Designer</p>
-                <ul class="soc__list list">
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link">
-                      <svg class="soc__icon" width="20" height="20">
+              <div class="team-card">
+                <h3 class="team-card__title">Михайло Єрмаков</h3>
+                <p class="team-card__profession">UI Designer</p>
+                <ul class="social list">
+                  <li class="social__item">
+                    <a href="" class="social__link link">
+                      <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="team-soc-item">
-                    <a href="" class="soc__link link"
-                      ><svg class="soc__icon" width="20" height="20">
+                  <li class="social__item">
+                    <a href="" class="social__link link"
+                      ><svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -272,10 +272,10 @@
         </div>
       </section>
       <!-- Client -->
-      <section class="section client">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
-          <ul class="client__list list">
+          <ul class="client list">
             <li class="client__item">
               <a href="" class="client__link link"
                 ><svg class="client__icon" width="106" height="60">
@@ -317,70 +317,76 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer__section">
-      <div class="container footer__container">
-        <div class="page-footer">
-          <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
+    <footer class="footer">
+      <div class="container page-footer">
+        <div class="footer-info">
+          <a href="./index.html" class="footer-info__logo logo"
+            >Web<span class="accent">Studio</span></a
+          >
           <address>
-            <ul class="site__footer list">
-              <li class="item">
+            <ul class="footer-info__list list">
+              <li class="footer-info__item item">
                 <a
                   href="https://goo.gl/maps/UnmmoopjUjEERXCH8"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="map__link"
+                  class="footer-info__link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="item">
-                <a href="mailto:info@example.com" class="link">info@example.com</a>
+              <li class="footer-info__item item">
+                <a href="mailto:info@example.com" class="footer-info__link link"
+                  >info@example.com</a
+                >
               </li>
-              <li class="item"><a href="tel:+380991111111" class="link">+38 099 111 11 11</a></li>
+              <li class="footer-info__item item">
+                <a href="tel:+380991111111" class="footer-info__link link">+38 099 111 11 11</a>
+              </li>
             </ul>
           </address>
         </div>
-        <div class="page__invait">
-          <h2 class="invait__title">приєднуйтесь</h2>
-          <ul class="invait__list list">
-            <li class="invait-soc-item">
+        <div class="page-invait">
+          <h2 class="page-invait__title">приєднуйтесь</h2>
+          <ul class="invait-social list">
+            <li class="invait-social__item">
               <a href="" class="invait__link link"
-                ><svg class="invait__icon" width="20" height="20">
+                ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
-            <li class="invait-soc-item">
+            <li class="invait-social__item">
               <a href="" class="invait__link link"
-                ><svg class="invait__icon" width="20" height="20">
+                ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
-            <li class="invait-soc-item">
+            <li class="invait-social__item">
               <a href="" class="invait__link link"
-                ><svg class="invait__icon" width="20" height="20">
+                ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
-            <li class="invait-soc-item">
+            <li class="invait-social__item">
               <a href="" class="invait__link link"
-                ><svg class="invait__icon" width="20" height="20">
+                ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
-        <form class="subscribe__form">
-          <label for="user-email" class="subscribe__label">Підпишіться на розсилку</label>
-          <div class="footer__subscribe">
+        <form class="subscribe-form">
+          <label for="user-email" class="subscribe-form__label">Підпишіться на розсилку</label>
+          <div class="footer-subscribe">
             <input
               type="email"
-              class="subscribe__input"
+              class="footer-subscribe__input"
               name="user-email"
               id="subscribe-email"
               placeholder="E-mail"
               required
             />
-            <button class="subscribe__button" type="submit">Підписатися</button>
-            <svg class="subscribe__icon" width="24" height="24">
+            <button class="footer-subscribe__button" type="submit">Підписатися</button>
+            <svg class="footer-subscribe__icon" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
           </div>
@@ -390,12 +396,12 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
-          <svg class="close__icon" width="18" height="18">
+          <svg class="modal__close__icon" width="18" height="18">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
         <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
-        <form class="modal-form">
+        <form class="modal__form">
           <div class="modal__fieled">
             <label for="user-name" class="modal__label">Ім'я</label>
             <span class="input__wrap">
