--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
   </head>
   <body>
     <!-- Head -->
-    <header>
-      <div class="container page-header">
-        <a href="./index.html" class="logo">Web<span class="page-header__logo">Studio</span></a>
+    <header class="header">
+      <div class="container header__container">
+        <a class="logo" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
+        <!-- <div class="menu-container"> -->
         <nav class="navigation">
           <ul class="navigation__list list">
             <li class="navigation__item item">
-              <a href="./index.html" class="navigation__link link current">Студія</a>
+              <a href="./index.html" class="navigation__link link navigation__link--current"
+                >Студія</a
+              >
             </li>
             <li class="navigation__item item">
               <a href="./portfolio.html" class="navigation__link link">Портфоліо</a>
@@ -50,13 +53,21 @@
           </li>
         </ul>
       </div>
+      <!-- <button class="menu-open" type="button">
+          <svg class="menu-open-icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu_open"></use>
+          </svg>
+        </button> -->
+      <!-- </div> -->
     </header>
     <!-- Hero -->
     <main>
       <section class="hero">
         <div class="container hero__container">
           <h1 class="hero__title">Ефективні рішення для<br />вашого бізнесу</h1>
-          <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
+          <button type="button" class="hero__button button" data-modal-open>
+            Замовити послугу
+          </button>
         </div>
       </section>
       <!-- Feature -->
@@ -70,7 +81,7 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="feature__title title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li class="feature__item item">
@@ -79,7 +90,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="feature__title title">ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
               <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li class="feature__item item">
@@ -88,7 +99,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="feature__title title">ПЛАНУВАННЯ</h3>
+              <h3 class="title">ПЛАНУВАННЯ</h3>
               <p>Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="feature__item item">
@@ -97,14 +108,14 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="feature__title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
           </ul>
         </div>
       </section>
       <!-- Presentation -->
-      <section class="section page-presentation">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="presentation list">
@@ -128,11 +139,12 @@
           </ul>
         </div>
       </section>
-      <section class="section page-team">
+      <!-- Team -->
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team list">
-            <li class="item">
+            <li class="team__item item">
               <img src="./images/designer.jpg" alt="Співробітник" width="270" />
               <div class="team-card">
                 <h3 class="team-card__title">Ігор Дем'яненко</h3>
@@ -166,7 +178,7 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team__item item">
               <img src="./images/developer.jpg" alt="Співробітниця" width="270" />
               <div class="team-card">
                 <h3 class="team-card__title">Ольга Рєпіна</h3>
@@ -200,7 +212,7 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team__item item">
               <img src="./images/marketing.jpg" alt="Співробітник" width="270" />
               <div class="team-card">
                 <h3 class="team-card__title">Микола Тарасов</h3>
@@ -234,7 +246,7 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team__item item">
               <img src="./images/uidesigner.jpg" alt="Співробітник" width="270" />
               <div class="team-card">
                 <h3 class="team-card__title">Михайло Єрмаков</h3>
@@ -282,31 +294,31 @@
                   <use href="./images/icons.svg#icon-logo"></use></svg
               ></a>
             </li>
-            <li class="client__item">
+            <li class="client__item item">
               <a href="" class="client__link link"
                 ><svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-1"></use></svg
               ></a>
             </li>
-            <li class="client__item">
+            <li class="client__item item">
               <a href="" class="client__link link"
                 ><svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-2"></use></svg
               ></a>
             </li>
-            <li class="client__item">
+            <li class="client__item item">
               <a href="" class="client__link link"
                 ><svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-3"></use></svg
               ></a>
             </li>
-            <li class="client__item">
+            <li class="client__item item">
               <a href="" class="client__link link"
                 ><svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-4"></use></svg
               ></a>
             </li>
-            <li class="client__item">
+            <li class="client__item item">
               <a href="" class="client__link link"
                 ><svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-5"></use></svg
@@ -318,64 +330,62 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container page-footer">
-        <div class="footer-info">
-          <a href="./index.html" class="footer-info__logo logo"
-            >Web<span class="footer-info__logo--inverse">Studio</span></a
+      <div class="container footer__container">
+        <div class="footer__left">
+          <a class="logo logo--light" href="./index.html"
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <address>
-            <ul class="footer-info__list list">
-              <li class="footer-info__item item">
+            <ul class="footer__list list">
+              <li class="footer__item item">
                 <a
                   href="https://goo.gl/maps/UnmmoopjUjEERXCH8"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="footer-info__link"
+                  class="footer__link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-info__item item">
-                <a href="mailto:info@example.com" class="footer-info__link link"
-                  >info@example.com</a
-                >
+              <li class="footer__item item">
+                <a href="mailto:info@example.com" class="footer__link link">info@example.com</a>
               </li>
-              <li class="footer-info__item item">
-                <a href="tel:+380991111111" class="footer-info__link link">+38 099 111 11 11</a>
+              <li class="footer__item item">
+                <a href="tel:+380991111111" class="footer__link link">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="page-invait">
-          <h2 class="page-invait__title">приєднуйтесь</h2>
+        <div class="invait">
+          <h2 class="invait__title">приєднуйтесь</h2>
           <ul class="invait-social list">
             <li class="invait-social__item">
-              <a href="" class="invait__link link"
+              <a href="" class="invait-social__link link"
                 ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="invait-social__item">
-              <a href="" class="invait__link link"
+              <a href="" class="invait-social__link link"
                 ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="invait-social__item">
-              <a href="" class="invait__link link"
+              <a href="" class="invait-social__link link"
                 ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="invait-social__item">
-              <a href="" class="invait__link link"
+              <a href="" class="invait-social__link link"
                 ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
-        <form class="subscribe-form">
-          <label for="user-email" class="subscribe-form__label">Підпишіться на розсилку</label>
+        <form class="subscribe">
+          <label for="user-email" class="subscribe__label">Підпишіться на розсилку</label>
           <div class="footer-subscribe">
             <input
               type="email"
@@ -393,6 +403,7 @@
         </form>
       </div>
     </footer>
+    <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
@@ -404,27 +415,45 @@
         <form class="modal__form">
           <div class="modal__fieled">
             <label for="user-name" class="modal__label">Ім'я</label>
-            <span class="input__wrap">
-              <input type="text" class="modal__input" name="user-name" id="user-name" required />
-              <svg class="input__icon" width="18" height="18">
+            <span class="modal__input__wrap">
+              <input
+                type="text"
+                class="modal__input__fieled"
+                name="user-name"
+                id="user-name"
+                required
+              />
+              <svg class="modal__input__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </span>
           </div>
           <div class="modal__fieled">
             <label for="user-tel" class="modal__label">Телефон</label>
-            <span class="input__wrap">
-              <input type="tel" class="modal__input" name="user-tel" id="user-tel" required />
-              <svg class="input__icon" width="18" height="18">
+            <span class="modal__input__wrap">
+              <input
+                type="tel"
+                class="modal__input__fieled"
+                name="user-tel"
+                id="user-tel"
+                required
+              />
+              <svg class="modal__input__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </span>
           </div>
           <div class="modal__fieled">
             <label for="user-email" class="modal__label">Пошта</label>
-            <span class="input__wrap">
-              <input type="email" class="modal__input" name="user-email" id="user-email" required />
-              <svg class="input__icon" width="18" height="18">
+            <span class="modal__input__wrap">
+              <input
+                type="email"
+                class="modal__input__fieled"
+                name="user-email"
+                id="user-email"
+                required
+              />
+              <svg class="modal__input__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </span>
@@ -433,12 +462,12 @@
             <label for="user-text" class="modal__label">Коментар</label>
             <textarea
               name="user-text"
-              class="online__comment"
+              class="modal__comment"
               id="user-text"
               placeholder="Введіть текст"
             ></textarea>
           </div>
-          <div class="modal__fieled agree">
+          <div class="modal__fieled modal__fieled__agree">
             <input
               type="checkbox"
               class="modal__check visually_hidden"
@@ -446,12 +475,12 @@
               id="mailing-list"
             />
             <label for="mailing-list" class="check__text"
-              ><span class="check__box"
-                ><svg class="check__icon" width="11" height="8">
+              ><span class="modal__check__box"
+                ><svg class="modal__check__icon" width="11" height="8">
                   <use href="./images/icons.svg#icon-check"></use></svg></span
               ><span
                 >Погоджуюся з розсилкою та приймаю
-                <a href="" class="modal__link link"> Умови договору</a></span
+                <a href="" class="modal__agree link"> Умови договору</a></span
               ></label
             >
           </div>
