--- a/portfolio.html
+++ b/portfolio.html
@@ -17,16 +17,19 @@
   </head>
   <body>
     <!-- Head -->
-    <header>
-      <div class="container page-header">
-        <a href="./index.html" class="logo">Web<span class="page-header__logo">Studio</span></a>
+    <header class="header">
+      <div class="container header__container">
+        <a class="logo" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
+        <!-- <div class="menu-container"> -->
         <nav class="navigation">
           <ul class="navigation__list list">
             <li class="navigation__item item">
               <a href="./index.html" class="navigation__link link">Студія</a>
             </li>
             <li class="navigation__item item">
-              <a href="./portfolio.html" class="navigation__link link current">Портфоліо</a>
+              <a href="./portfolio.html" class="navigation__link link navigation__link--current"
+                >Портфоліо</a
+              >
             </li>
             <li class="navigation__item item">
               <a href="" class="navigation__link link">Контакти</a>
@@ -50,6 +53,12 @@
           </li>
         </ul>
       </div>
+      <!-- <button class="menu-open" type="button">
+          <svg class="menu-open-icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu_open"></use>
+          </svg>
+        </button> -->
+      <!-- </div> -->
     </header>
     <!-- Hero -->
     <main>
@@ -207,64 +216,62 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container page-footer">
-        <div class="footer-info">
-          <a href="./index.html" class="footer-info__logo logo"
-            >Web<span class="footer-info__logo--inverse">Studio</span></a
+      <div class="container footer__container">
+        <div class="footer__left">
+          <a class="logo logo--light" href="./index.html"
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <address>
-            <ul class="footer-info__list list">
-              <li class="footer-info__item item">
+            <ul class="footer__list list">
+              <li class="footer__item item">
                 <a
                   href="https://goo.gl/maps/UnmmoopjUjEERXCH8"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="footer-info__link"
+                  class="footer__link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-info__item item">
-                <a href="mailto:info@example.com" class="footer-info__link link"
-                  >info@example.com</a
-                >
+              <li class="footer__item item">
+                <a href="mailto:info@example.com" class="footer__link link">info@example.com</a>
               </li>
-              <li class="footer-info__item item">
-                <a href="tel:+380991111111" class="footer-info__link link">+38 099 111 11 11</a>
+              <li class="footer__item item">
+                <a href="tel:+380991111111" class="footer__link link">+38 099 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="page-invait">
-          <h2 class="page-invait__title">приєднуйтесь</h2>
+        <div class="invait">
+          <h2 class="invait__title">приєднуйтесь</h2>
           <ul class="invait-social list">
             <li class="invait-social__item">
-              <a href="" class="invait__link link"
+              <a href="" class="invait-social__link link"
                 ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="invait-social__item">
-              <a href="" class="invait__link link"
+              <a href="" class="invait-social__link link"
                 ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="invait-social__item">
-              <a href="" class="invait__link link"
+              <a href="" class="invait-social__link link"
                 ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="invait-social__item">
-              <a href="" class="invait__link link"
+              <a href="" class="invait-social__link link"
                 ><svg class="invait-social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
-        <form class="subscribe-form">
-          <label for="user-email" class="subscribe-form__label">Підпишіться на розсилку</label>
+        <form class="subscribe">
+          <label for="user-email" class="subscribe__label">Підпишіться на розсилку</label>
           <div class="footer-subscribe">
             <input
               type="email"
